--- a/plugin.xml
+++ b/plugin.xml
@@ -6,6 +6,7 @@
     <information>
       <category value="" />
       <description value="Action plugin to create a new issue in JIRA" />
+      <supportlevel value="unsupported" />
     </information>
     <configuration>
       <property key="jira_url" label="JIRA URL" type="string" description="The JIRA URL for creating a new issue" default="http://linzservvm.dynatrace.local:8080/jira" />
@@ -18,6 +19,7 @@
       <property key="jira_reporter" label="JIRA Reporter" type="string" description="The reporter for the new issue" default="" />
       <property key="jira_assignee" label="JIRA Assignee" type="string" description="The assignee for the new issue (will be defaulted to the reporter if missing)" default="" />
       <property key="jira_version" label="JIRA Version" type="string" description="The version for the new issue" default="" />
+      <property key="jira_projectName" label="JIRA Project Name" type="string" description="JIRA Project Name" default="default" />
     </configuration>
   </extension>
   <extension point="com.dynatrace.diagnostics.pdk.action" id="com.dynatrace.diagnostics.jira.CreateIssueActionPlugin.action" name="JIRA - Create Issue">
